--- a/view/error.html
+++ b/view/error.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="/lib/angular.min.js"></script>
+    <title><%- title %></title>
 </head>
 <body>
-欢迎使用PM Tool。
-
+<%- message %>
 </body>
 </html>
