--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>PMTool</title>
-    <script src="/lib/angular.min.js"></script>
-    <script src="/lib/lz-string.min.js"></script>
+    <script src="/public/lib/angular.min.js"></script>
+    <script src="/public/lib/lz-string.min.js"></script>
     <script>
         var app = angular.module("dashboard",[]);
     </script>
-    <script src="/js/tableEditController.js"></script>
+    <script src="/public/js/tableEditController.js"></script>
 </head>
 <style>
     body{
