--- a/view/tutorial.html
+++ b/view/tutorial.html
@@ -2,35 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="./root.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/root.css" rel="stylesheet" type="text/css"/>
+    <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
     <title>Delivery Index</title>
 </head>
 <body>
 <div id="blog">
     <div id="guide">
         <ul style="margin-left:0.5rem;padding-left:0;">
-            <li>Preface</li>
-            <li>1. PM相关工具</li>
-            <li>2. 报告书写</li>
-            <li>3. 报告书写</li>
-            <li>4. 产品交付</li>
+            <li class="noBtn"><a href="/tutorial">索引</a></li>
+            <li class="noBtn">1. 概述</li>
+            <li><button>+</button> 2. PM相关工具</li>
+            <li><button>+</button> 3. 报告书写</li>
             <ul>
-                <li>4.1 用以交付的产品类型</li>
-                <li>4.2 FTP账户的使用</li>
-                <li>4.3 应用上传</li>
-                <li>4.4 产品的寄送</li>
-                <li>4.5 license的分发</li>
+                <li class="noBtn">3.1 <a href="/tutorial/ReportRoyalty">Royalty Report</a></li>
+            </ul>
+            <li><button>+</button> 4. 产品交付 </li>
+            <ul>
+                <li class="noBtn">4.1 用以交付的产品类型</li>
+                <li class="noBtn">4.2 FTP账户的使用</li>
+                <li class="noBtn">4.3 应用上传</li>
+                <li class="noBtn">4.4 产品的寄送</li>
+                <li><button>+</button> 4.5 license的分发</li>
                 <ul>
                     <li>4.5.1 应用生成的流程</li>
-                    <li>4.5.2 UUID的生成</li>
+                    <li><a href="/tutorial/deliveryuuid">4.5.2 通过UUID生成许可</a></li>
                     <li>4.5.3 License server的维护</li>
                 </ul>
             </ul>
+            <li><button>+</button> 5. 项目维护流程</li>
         </ul>
     </div>
     <div id="main">
-        <div id="contents"></div>
-        <div id="footer">本页面为测试使用的静态网页</div>
+        <%- contents %>
     </div>
 </div>
 </body>
