--- a/view/tutorial/preface.html
+++ b/view/tutorial/preface.html
@@ -9,17 +9,14 @@
     h3 >a{
         margin-left:auto;
         margin-right:2rem;
-        color:lightskyblue;
+        color:inherit;
     }
 
     h3 >a:hover{
-        color:mediumslateblue;
+        color:lightskyblue;
 
     }
 
-    h3 >a:visited{
-        color:purple;
-    }
     h3 >a:visited:hover{
         color:mediumslateblue;
     }
@@ -28,21 +25,39 @@
 
 <h1>索引</h1>
 <div style="margin-top:2rem;margin-left:auto;margin-right:auto;width:45rem;">
-    <h3>1.  概述<a href="/tutorial/introduction"><i class="fas fa-angle-double-right"></i></a></h3>
+    <h3>1.  概述
+        <a href="/tutorial/introduction">
+        <i class="fas fa-angle-double-right"></i><i class="fas fa-angle-double-right"></i>
+        </a>
+    </h3>
     <p>对PM的整体工作流程做一个简述，你可以跳过本章节，直接阅览下面需要的部分</p>
-    <h3>2.  PM相关工具<a href="/tutorial/tools"><i class="fas fa-angle-double-right"></i></a></h3>
+    <h3>2.  PM相关工具
+        <a href="/tutorial/tools">
+            <i class="fas fa-angle-double-right"></i><i class="fas fa-angle-double-right"></i>
+        </a>
+    </h3>
     <p>本章节将对PM所使用的相关工具做一个介绍</p>
-    <h3>3.  会议主持与报告书写<a href="/tutorial/reports"><i class="fas fa-angle-double-right"></i></a></h3>
+    <h3>3.  会议主持与报告书写
+        <a href="/tutorial/reports">
+        <i class="fas fa-angle-double-right"></i><i class="fas fa-angle-double-right"></i>
+        </a>
+    </h3>
     <p>本章节将会就PM主持的相关会议与工作报告的书写格式进行规范</p>
-    <h3>4.  产品交付<a href="/tutorial/delivery"><i class="fas fa-angle-double-right"></i></a></h3>
+    <h3>4.  产品交付
+        <a href="/tutorial/delivery">
+        <i class="fas fa-angle-double-right"></i><i class="fas fa-angle-double-right"></i>
+        </a>
+    </h3>
     <p>本部分将会就本司相关产品如何交付的流程等作出相应的规范</p>
     <ul>
-        <li><a href="tutorial/deliveryShipment">4.4 产品的寄送</a></li>
-        <li><a href="tutorial/deliveryLicense">4.5 license的分发</a></li>
+        <li><a href="/tutorial/deliveryShipment">4.4 产品的寄送</a></li>
+        <li><a href="/tutorial/deliveryLicense">4.5 license的分发</a></li>
         <ul>
-            <li><a href="tutorial/deliveryUUID">4.5.2 UUID的分发</a></li>
+            <li><a href="/tutorial/deliveryUUID">4.5.2 UUID的分发</a></li>
         </ul>
     </ul>
-    <h3>5.  项目维护流程<a href="/tutorial/delivery"><i class="fas fa-angle-double-right"></i></a></h3>
+    <h3>5.  项目维护流程<a href="/tutorial/delivery">
+        <i class="fas fa-angle-double-right"></i><i class="fas fa-angle-double-right"></i>
+    </a></h3>
     <p>本部分将会就本司相关项目的记录方法进行相关说明</p>
 </div>
