--- a/view/tutorial.html
+++ b/view/tutorial.html
@@ -12,25 +12,39 @@
         <ul style="margin-left:0.5rem;padding-left:0;">
             <li class="noBtn"><a href="/tutorial">索引</a></li>
             <li class="noBtn">1. 概述</li>
+            <ul>
+                <li class="noBtn"><a href="/tutorial/introMeeting">1.1 会议一览</a></li>
+            </ul>
             <li><button>+</button> 2. PM相关工具</li>
             <li><button>+</button> 3. 报告书写</li>
             <ul>
-                <li class="noBtn">3.1 <a href="/tutorial/ReportRoyalty">Royalty Report</a></li>
+                <li class="noBtn"><a href="/tutorial/ReportEfforts">3.1 Efforts Report</a></li>
+                <li class="noBtn"><a href="/tutorial/ReportRoyalty">3.2 Royalty Report</a></li>
+                <li class="noBtn"><a href="/tutorial/ReportPriority">3.3 Priority Report</a></li>
+                <li class="noBtn"><a href="/tutorial/ReportBRP">3.4 Business Review Presentation</a></li>
             </ul>
-            <li><button>+</button> 4. 产品交付 </li>
+            <li><button>+</button> 4. 产品概览</li>
             <ul>
-                <li class="noBtn">4.1 用以交付的产品类型</li>
-                <li class="noBtn">4.2 FTP账户的使用</li>
-                <li class="noBtn">4.3 应用上传</li>
-                <li class="noBtn">4.4 产品的寄送</li>
-                <li><button>+</button> 4.5 license的分发</li>
+                <li class="noBtn"><a href="/tutorial/productCodec">4.1 音视频解码器</a></li>
+                <li class="noBtn"><a href="/tutorial/productDTV">4.2 DTV Player</a></li>
+            </ul>
+            <li><button>+</button> 5. 产品交付 </li>
+            <ul>
+                <li class="noBtn">5.1 FTP账户的使用</li>
+                <li class="noBtn">5.2 应用市场上传</li>
                 <ul>
-                    <li>4.5.1 应用生成的流程</li>
-                    <li><a href="/tutorial/deliveryuuid">4.5.2 通过UUID生成许可</a></li>
-                    <li>4.5.3 License server的维护</li>
+                    <li>5.2.1 中国应用宝上传</li>
+                    <li>5.2.2 Google Play上传</li>
+                    <li>5.2.3 ios上传</li>
+                </ul>
+                <li class="noBtn"><a href="/tutorial/deliveryshipment">5.3 产品的寄送</a></li>
+                <li><button>+</button> <a href="/tutorial/deliveryLicense">5.4 license的分发</a></li>
+                <ul>
+                    <li><a href="/tutorial/deliveryuuid">5.4.1 通过UUID生成许可</a></li>
+                    <li>5.4.2 License server的维护</li>
                 </ul>
             </ul>
-            <li><button>+</button> 5. 项目维护流程</li>
+            <li><button>+</button> 6. 项目维护</li>
         </ul>
     </div>
     <div id="main">
