--- a/view/tutorial.html
+++ b/view/tutorial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="/css/root.css" rel="stylesheet" type="text/css"/>
     <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
+    <script src="/js/doc.js"></script>
     <title>Delivery Index</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
                 <li><button>+</button> <a href="/tutorial/deliveryLicense">5.4 license的分发</a></li>
                 <ul>
                     <li><a href="/tutorial/deliveryuuid">5.4.1 通过UUID生成许可</a></li>
-                    <li>5.4.2 License server的维护</li>
+                    <li><a href="/tutorial/deliveryLicenseServer">5.4.2 Cidana server生成许可</a></li>
                 </ul>
             </ul>
             <li><button>+</button> 6. 项目维护</li>
