--- a/view/tutorial/deliverylicense.html
+++ b/view/tutorial/deliverylicense.html
@@ -10,7 +10,7 @@
     <p style="font-weight:bold;">a) cidana server</p>
     <div style="margin-left:2rem;padding-left:1rem;">
         <p>cidana server是最新的授权产品追踪方式，通过联网的方式实时检测用户的授权许可，这种方法最为保险，但需要客户方愿意配合，因此目前只有我们自主发布的手机应用能够整合该授权方式。</p>
-        <p>具体授权流程及已经适用的产品详情请参照本章第二节：<a href="/tutorial/license server">license server的使用</a>。</p>
+        <p>具体授权流程及已经适用的产品详情请参照本章第二节：<a href="/tutorial/deliverylicenseServer">cidana server的使用</a>。</p>
     </div>
     <p style="font-weight:bold;">b) UUID</p>
     <div style="margin-left:2rem;padding-left:1rem;">
@@ -23,7 +23,7 @@
     </div>
 
     <h3>&nbsp注意事项&nbsp</h3>
-    <p>a) 对于用第一种授权方法的应用或产品，需要在发送给客户之前就采取行动，具体方法参照本章第二节：<a href="/tutorial/license server">license server的使用</a>。</p>
+    <p>a) 对于用第一种授权方法的应用或产品，需要在发送给客户之前就采取行动，具体方法参照本章第二节：<a href="/tutorial/deliverylicenseServer">cidana server的使用</a>。</p>
 
     <h3>&nbspRoyalty的记录&nbsp</h3>
     <p>a) 对于一部分产品，尤其是使用了cidana license server的授权方式的产品而言，我们使用cidana license server来完成对Royalty数量的追踪。主要包括DTV Player等apk形式发布的产品。</p>
