--- a/view/docManager.html
+++ b/view/docManager.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>文件管理器</title>
     <script src="/js/docManager.js"></script>
+    <script src="/js/doc.js"></script>
     <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
     <script src="/lib/lz-string.min.js"></script>
 </head>
@@ -161,13 +162,29 @@
         height:100%;
         display:none;
     }
+
+    .docEntries td{
+        max-width:18rem;
+        overflow:auto;
+    }
+
+    .docEntries tr>td:nth-child(4){
+        max-width:10rem;
+    }
+
+
+    .docEntries tr>td:nth-child(3){
+        max-width:6rem;
+        word-break:break-all;
+    }
+
 </style>
 <body>
 <div id="header"><div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana 文件管理器</div></div>
 <div id="main">
-    <div style="margin-top:2rem;min-height:25rem;align-self:flex-start;margin-left:auto;margin-right:auto;display:flex;flex-direction:column;">
+    <div style="margin-top:2rem;margin-bottom:2rem;min-height:25rem;flex:1;align-self:flex-start;margin-left:auto;margin-right:auto;display:flex;flex-direction:column;">
         <div style="display:flex;flex-direction:row;margin-left:auto;"><button onclick="addDoc()">添加文件</button></div>
-        <table class="listTable" style="margin-left:auto;margin-right:auto;">
+        <table class="listTable docEntries" style="margin-left:auto;margin-right:auto;">
             <tr>
                 <td>编号</td>
                 <td>客户</td>
@@ -183,19 +200,48 @@
             <% for(var i=0;i<entries.length;++i){ %>
             <tr>
                 <td><%- i+1 %></td>
-                <td><%- entries[i].account.name %></td>
-                <td><%- entries[i].project.name %></td>
-                <td><%- entries[i].name %></td>
-                <td><%- entries[i].description %></td>
-                <td><%- entries[i].date %></td>
-                <td><% if(entries[i].source===0) { %>
-                       fileserver
-                    <% }else if(entries[i].source === 1){ %>
-                       online
+                <td><% if (entries[i].account){ %>
+                    <%- entries[i].account.name %>
                     <% } %>
                 </td>
-                <td><%- entries[i].type %></td>
-                <td><%- entries[i].link %></td>
+                <td><% if(entries[i].project){ %>
+                    <%- entries[i].project.name %>
+                    <% } %>
+                </td>
+                <td><%- entries[i].name %></td>
+                <td><%- entries[i].description %></td>
+                <td><% let date = entries[i].date; %>
+                    <%- date.getFullYear()+'/'+(date.getMonth()+1)+'/'+date.getDate() %>
+                </td>
+                <td><% if(entries[i].source===0) { %>
+                       assets
+                    <% }else if(entries[i].source === 1){ %>
+                       online
+                    <% }else if(entries[i].source === 2){ %>
+                       fileserver
+                    <% } %>
+                </td>
+                <td><% if(entries[i].type == 0){ %>
+                        NDA
+                    <% }else if(entries[i].type === 1){ %>
+                        SOW
+                    <% }else if(entries[i].type === 2){ %>
+                        SLA
+                    <% }else if(entries[i].type === 3){ %>
+                        Royalty
+                    <% }else if(entries[i].type === 4){ %>
+                        invoice
+                    <% }else if(entries[i].type === 5){ %>
+                        reference
+                    <% } %>
+                </td>
+                <td><% if(entries[i].source === 1){ %>
+                    <a href="<%- entries[i].link %>" target="_blank">前往</a>
+                    <% } else { %>
+                    <div style="width:0;height:0;overflow:hidden;"><%- entries[i].link %></div>
+                    <div><button onclick="copyPrev(this)" style="padding-left:5px;padding-right:5px;">复制地址</button></div>
+                    <% } %>
+                </td>
                 <td><%- entries[i].reference %></td>
             </tr>
             <% } %>
@@ -214,7 +260,7 @@
 <div class="footer" style="margin-top:2rem;">
 
 </div>
-<div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);">
+<div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);position:fixed;">
     <div id="addDoc" style="position:relative;">
         <div id="addDocCover" class="coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);">
             <i class="fa fa-spinner fa-spin fa-3x" style="margin:auto;"></i>
@@ -222,6 +268,14 @@
         <div style="margin:1rem;display:flex;flex-direction:column;">
             <table id="docDetail" class="displayTable" style="flex:1;">
                 <tr><td>文件名称</td><td><input id="nameInput"></td></tr>
+                <tr><td>文件类型</td><td><select id="typeSelect" style="z-index:89;position:absolute;">
+                    <option value="0">NDA(保密协议)</option>
+                    <option value="1">SOW(工作内容确认书)</option>
+                    <option value="2">SLA(合同与合同修订)</option>
+                    <option value="3">Royalty(季度产量报告)</option>
+                    <option value="4">invoice(财务收据)</option>
+                    <option value="4">reference(参考文章)</option>
+                </select></td></tr>
                 <tr><td>客户</td><td>
                     <select id="customerSelect" onchange="changeAccount(this)" onmousedown="if(this.options.length>10){this.size=10}" onblur="this.size = 0" style="position:absolute;z-index:88;">
                     <option value="1">请选择客户</option>
@@ -231,11 +285,14 @@
                     <% } %>
                 </select>
                 </td></tr>
-                <tr><td>项目</td><td><select id="projectSelect"></select></td></tr>
+                <tr><td>项目</td><td><select id="projectSelect">
+                    <option value="1">请选择客户项目</option>
+                </select></td></tr>
                 <tr><td>文件描述</td><td><textarea id="descriptionInput"></textarea></td></tr>
                 <tr><td>文件来源</td><td><select id="sourceSelect">
-                    <option value="0">fileserver</option>
+                    <option value="0">assets</option>
                     <option value="1">online</option>
+                    <option value="2">fileserver</option>
                 </select></td></tr>
                 <tr><td>文件地址</td><td><input id="linkInput"></td></tr>
                 <tr><td>参考信息</td><td><textarea id="referenceInput"></textarea></td></tr>
