--- a/template/contactsInfo.html
+++ b/template/contactsInfo.html
@@ -1,7 +1,7 @@
 <div style="min-width:6rem;max-width:6rem;">{{ content.title || "暂无" }} </div>
 <div style="min-width:8rem;max-width:8rem;">{{ content.company.name || "" }} </div>
 <div style="min-width:8rem;max-width:8rem;">{{ content.name || "" }} </div>
-<div style="min-width:8rem;max-width:8rem;">{{ content.alias || "暂无" }} </div>
+<div style="min-width:8rem;max-width:8rem;">{{ content.alias || "暂无" }} </div>ng-
 <div style="min-width:6rem;max-width:6rem;">{{ content.number || "暂无" }} </div>
 <div style="min-width:16rem;max-width:16rem;text-overflow:ellipsis;word-break:break-all;">{{ content.mail || "" }} </div>
 <div style="min-width:16rem;max-width:16rem;">
