--- a/view/tutorial/reportroyalty.html
+++ b/view/tutorial/reportroyalty.html
@@ -160,9 +160,14 @@
 
     <h3 id="googleAnalytics" style="margin-top:4rem;">&nbspGoogle Analytics数据采集流程&nbsp</h3>
     <p>尚未建立，等待更新</p>
-    <p>a) 进入Google Analytics主页，按下图所示进入Audience
-        <img href="/img/20200423155211.jpgd">
+    <p>a) 进入Google Analytics主页，按下图所示进入Audience->GEO
+        <img src="/img/20200423155211.jpg" alt="Google Analytics 演示流程1">
     </p>
-
+    <p>b) 在Geo的language下根据不同的项目将New User的数量填入表格。
+        <img src="/img/202005081519.jpg" alt="Google Analytics 演示流程2">
+    </p>
+    <p>c) 在Geo的location下将Thailand与Philippines的new user数量填入表格。
+        <img src="/img/202005081618.jpg" alt="Google Analytics 演示流程2">
+    </p>
 
 </div>
