--- a/view/docManager.html
+++ b/view/docManager.html
@@ -3,187 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>文件管理器</title>
-    <script src="/js/docManager.js"></script>
+    <script>
+        var PAGE_ID = "<%- pageId+1 %>";
+        var SETTING = <%- setting %>;
+    </script>
     <script src="/js/doc.js"></script>
+    <script src="/js/docManager.js"></script>
+    <link href="/css/general.css" rel="stylesheet" type="text/css"/>
     <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
     <script src="/lib/lz-string.min.js"></script>
 </head>
-<style>
-    *{
-        margin:0;
-        padding:0;
-    }
-
-    body{
-        min-height:100vh;
-        display:flex;
-        flex-direction:column;
-        color:rgba(85,85,85,1);
-        background:rgba(230,230,230,1);
-    }
-
-    #header{
-        width:100%;
-        color:white;
-        font-size:1.2rem;
-        display:flex;
-        flex-direction:row;
-        font-weight:bold;
-        border-bottom:solid 1.5rem rgba(196,18,48,0.8);
-        background:rgba(65,65,65,1);
-        min-height:3rem;
-    }
-
-    #main{
-        flex:1;
-        display:flex;
-        flex-direction:column;
-        background:white;
-        box-shadow: 0 5px 5px 1px rgba(208,208,208,0.8);
-    }
-
-    #addDoc{
-        margin:auto;
-        height:0;
-        overflow:hidden;
-        width:24rem;
-        border-radius:0.5rem;
-        box-shadow:inset 0 0 1px 1px rgba(185,185,185,0.8);
-        background:white;
-        transition: height 0.2s ease-out;
-        -moz-transition: height 0.2s ease-out;
-        -webkit-transition: height 0.2s ease-out;
-        -o-transition: height 0.2s ease-out;
-    }
-
-    #addDoc textarea{
-        resize:none;
-        margin-top:0.2rem;
-        min-height:3rem;
-        width:15rem;
-        padding-left:2px;
-    }
-
-    #addDoc input{
-        width:15rem;
-    }
-
-
-
-    .listTable{
-        margin-left:auto;
-        margin-right:auto;
-        border-collapse:collapse;
-    }
-
-    .listTable,.listTable td{
-        border: solid 1px rgba(185,185,158,1);
-    }
-
-    .listTable td{
-        padding:5px;
-        padding-left:10px;
-        padding-right:10px;
-    }
-
-    .listTable tr:nth-child(1){
-        background:rgba(65,65,65,1);
-        color:white;
-        font-family:  "Microsoft YaHei UI";
-    }
-
-    .displayTable td{
-        padding-left:0.5rem;
-        padding-right:0.5rem;
-        padding-top:0.2rem;
-        vertical-align:top;
-    }
-
-    .warning{
-        background:#daf1f8;
-        border: solid 1px #6fb5ca;
-        border-radius: 0.3rem;
-        padding:0.5rem;
-        padding-left:1rem;
-        padding-right:1rem;
-    }
-
-    .pageCount{
-        display:flex;
-        flex-direction:row;
-        margin-top:auto;
-        margin-bottom:2rem;
-        height:1.5rem;
-    }
-
-    .pageCount >button:first-child{
-        margin-left:auto;
-    }
-
-    .pageCount >button:last-child{
-        margin-right:auto;
-    }
-
-    .pageCount >button{
-        background:rgba(196,18,48,0.8);
-        border:solid 1px rgba(196,18,48,0.8);
-        border-radius:0.3rem;
-        width:1.5rem;
-        height:1.5rem;
-        font-weight:bold;
-        font-family:"Microsoft YaHei UI";
-        color:white;
-    }
-
-    .pageCount >button:hover{
-        border:solid 1px rgba(196,18,48,0.8);
-        background:white;
-        color:rgba(196,18,48,0.8);
-    }
-
-    .pageCount >button:disabled{
-        border:solid 1px rgba(196,18,48,0.8);
-        background:white;
-        color:rgba(196,18,48,0.8);
-    }
-
-    .footer{
-        margin-top:auto;
-        margin-bottom:0;
-        min-height:1.5rem;
-    }
-
-    .coverLayer{
-        position:absolute;
-        left:0;
-        top:0;
-        pointer-events:auto;
-        width:100%;
-        height:100%;
-        display:none;
-    }
-
-    .docEntries td{
-        max-width:18rem;
-        overflow:auto;
-    }
-
-    .docEntries tr>td:nth-child(4){
-        max-width:10rem;
-    }
-
-
-    .docEntries tr>td:nth-child(3){
-        max-width:6rem;
-        word-break:break-all;
-    }
-
-</style>
-<body>
+<body onload="loaded()">
 <div id="header"><div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana 文件管理器</div></div>
 <div id="main">
     <div style="margin-top:2rem;margin-bottom:2rem;min-height:25rem;flex:1;align-self:flex-start;margin-left:auto;margin-right:auto;display:flex;flex-direction:column;">
-        <div style="display:flex;flex-direction:row;margin-left:auto;"><button onclick="addDoc()">添加文件</button></div>
+        <div style="display:flex;flex-direction:row;margin-left:auto;"><button onclick="addDoc()" class="addDocBtn">添加文件</button></div>
         <table class="listTable docEntries" style="margin-left:auto;margin-right:auto;">
             <tr>
                 <td>编号</td>
@@ -239,7 +73,7 @@
                     <a href="<%- entries[i].link %>" target="_blank">前往</a>
                     <% } else { %>
                     <div style="width:0;height:0;overflow:hidden;"><%- entries[i].link %></div>
-                    <div><button onclick="copyPrev(this)" style="padding-left:5px;padding-right:5px;">复制地址</button></div>
+                    <div><button onclick="copyLocal(this)" style="padding-left:5px;padding-right:5px;">复制地址</button></div>
                     <% } %>
                 </td>
                 <td><%- entries[i].reference %></td>
@@ -250,19 +84,17 @@
         <div class="warning" style="margin:auto;">暂无数据!!</div>
         <% } %>
     </div>
-    <div class="pageCount" style="margin-top:auto;margin-bottom:1.5rem;">
-        <%  for(var i=0; i<= Math.ceil(total/20);++i){ %>
-        <%  if(i===0) i++ %>
-        <button disabled="<%- !(i===pageId) %>"><%- i %></button>
+    <div class="pageCount" id="pageCount" style="margin-top:auto;margin-bottom:1.5rem;">
+        <%  for(var i=0; i< Math.ceil(total/20);++i){ %>
+        <button onclick="gotoPage('<%- i+1 %>')"><%- i+1 %></button>
         <% } %>
     </div>
 </div>
 <div class="footer" style="margin-top:2rem;">
-
 </div>
 <div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);position:fixed;">
-    <div id="addDoc" style="position:relative;">
-        <div id="addDocCover" class="coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);">
+    <div class="addDoc" style="position:relative;">
+        <div class="addDocCover coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);">
             <i class="fa fa-spinner fa-spin fa-3x" style="margin:auto;"></i>
         </div>
         <div style="margin:1rem;display:flex;flex-direction:column;">
@@ -304,6 +136,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
